--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,10 +14,12 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: true
-      - name: Setup vcpkg
-        uses: lukka/get-cmake@latest
+      - name: Setup MSVC
+        run: call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
+      - name: Install CMake
+        uses: jwlawson/actions-setup-cmake@v1
         with:
-          cmakeVersion: '3.20.1'  
+          cmake-version: '3.20.1'  
       - name: Install vcpkg
         run: |
           git clone https://github.com/microsoft/vcpkg.git
