--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,11 +15,13 @@ jobs:
         with:
           submodules: true
       - name: Setup MSVC
-        run: call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
+        shell: cmd
+        run: |
+          "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
       - name: Install CMake
         uses: jwlawson/actions-setup-cmake@v1
         with:
-          cmake-version: '3.20.1'  
+          cmake-version: '3.20.1'  # Установите соответствующую версию CMake
       - name: Install vcpkg
         run: |
           git clone https://github.com/microsoft/vcpkg.git
