--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,14 +14,13 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: true
-      - name: Setup MSVC
-        shell: cmd
+      - name: Install MSVC Build Tools
         run: |
-          "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
+          choco install visualstudio2019buildtools --package-parameters "--add Microsoft.VisualStudio.Workload.VCTools --includeRecommended --includeOptional" --yes
       - name: Install CMake
         uses: jwlawson/actions-setup-cmake@v1
         with:
-          cmake-version: '3.20.1'  # Установите соответствующую версию CMake
+          cmake-version: '3.20.1'
       - name: Install vcpkg
         run: |
           git clone https://github.com/microsoft/vcpkg.git
