--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,36 +14,29 @@ jobs:
         with:
           submodules: true
 
-      - name: Add MSVC to PATH
-        uses: ilammy/msvc-dev-cmd@v1
-        with:
-          arch: x64
+      - name: Setup vcpkg
+        run: |
+          git clone https://github.com/microsoft/vcpkg
+          ./vcpkg/bootstrap-vcpkg.bat
+          ./vcpkg/vcpkg integrate install
 
-      - run: cmake . -DPATCH_VERSION=${{ github.run_number }} -B build
-      - run: cmake --build build --config Release
-      - run: ctest --test-dir build --build-config Release
-      
-      # Явно указываем путь для пакета
-      - run: cmake --build build --target package
-      - run: dir /s build  # Проверяем содержимое
+      - name: Install Boost.Test
+        run: ./vcpkg/vcpkg install boost-test:x64-windows
 
-      - name: Create Release
-        uses: actions/create-release@v1
-        id: create_release
-        env:
-          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.run_number }}
-          release_name: Release ${{ github.run_number }}
-          draft: false
-          prerelease: false
+      - name: Configure CMake
+        run: cmake -B build -DCMAKE_TOOLCHAIN_FILE="${{ github.workspace }}/vcpkg/scripts/buildsystems/vcpkg.cmake" -DPATCH_VERSION=${{ github.run_number }}
 
-      - name: Upload Release Asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+      - name: Build project
+        run: cmake --build build --config Release
+
+      - name: Run tests
+        run: ctest --test-dir build --build-config Release
+
+      - name: Package project
+        run: cmake --build build --target package
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./build/_packages/helloworld-0.0.${{ github.run_number }}-win64.zip
-          asset_name: helloworld-0.0.${{ github.run_number }}-win64.zip
-          asset_content_type: application/zip
+          name: package
+          path: build/*.zip
